# genesis

./: .gitignore  Cargo.toml  README.md  mise.toml
.claude/: ARCHITECTURE.md  CLAUDE.md  ROADMAP.md
assets/shaders/: stylized.wgsl
assets/shaders/common/: lighting.wgsl  noise.wgsl
assets/shaders/postprocess/: tilt_shift.wgsl  vignette.wgsl
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/input/: tool.rs
crates/app/src/plugins/: simulation.rs
crates/app/src/render/: grid_render.rs  mod.rs
crates/app/src/ui/: overlay.rs
crates/planet/: Cargo.toml
crates/planet/src/: heightmap.rs  lib.rs  mesh.rs  plugin.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  plugin.rs
crates/renderer/src/camera/: mod.rs  orbit.rs
crates/renderer/src/material/: mod.rs  stylized.rs
crates/renderer/src/postprocess/: mod.rs  tilt_shift.rs  vignette.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: actions.rs  config.rs  events.rs  grid.rs  lib.rs
crates/sim_core/src/rules/: climate.rs  life.rs  mod.rs  terraform.rs
