[workspace]
resolver = "2"
members = ["crates/sim_core", "crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
repository = "https://github.com/wheelofheaven/genesis"

[workspace.dependencies]
bevy = "0.18.1"
bevy_egui = "0.39"
noise = "0.9"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

# Enable optimizations for dependencies in dev builds (faster iteration)
[profile.dev.package."*"]
opt-level = 2

# Workaround: objc2 debug assertions crash on macOS 26 Tahoe.
# See https://github.com/iced-rs/iced/issues/3057
[profile.dev.package.objc2]
debug-assertions = false
[profile.dev.package.objc2-foundation]
debug-assertions = false
[profile.dev.package.objc2-app-kit]
debug-assertions = false

# Enable LTO for release builds
[profile.release]
lto = "thin"
